--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,3 +1,4 @@
 $pr_blue: #1d9bf0;
+$sc_gray: #e7e7e7;
 $font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
   Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
