--- a/src/styles/PostList.scss
+++ b/src/styles/PostList.scss
@@ -1,9 +1,34 @@
+@use 'vars' as *;
+
 .PostList {
+  position: relative;
   flex-grow: 1;
   min-height: 100vh;
-  margin: 0 auto;
-  background: orange;
+  margin: 0 auto 0;
+  // background: rgb(207, 207, 207);
   // @media (max-width: 450) {
   //   max-width: 100%;
   // }
+}
+
+.PostList__header {
+  // position: fixed;
+  // top: 0;
+  // right: 0;
+  // left: 0;
+  width: inherit;
+  padding: 0 40px 0 20px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  & span:first-child {
+    font-size: 18px;
+    font-weight: bold;
+  }
+  & span:last-child {
+    margin-top: 1px;
+    font-weight: bold;
+    color: $tr_gray;
+  }
 }
