--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,4 +1,7 @@
 $pr_blue: #1d9bf0;
+$pr_gray: #c4c4c4;
 $sc_gray: #e7e7e7;
+$tr_gray: #707070;
 $font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
   Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+$icons_size: 35;
