--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -3,6 +3,7 @@ $sc_blue: #1885ce;
 $pr_gray: #c4c4c4;
 $sc_gray: #e7e7e7;
 $tr_gray: #707070;
+$ft_gray: #242424;
 $font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
   Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 $icons_size: 35;
