--- a/src/styles/MenuBar.scss
+++ b/src/styles/MenuBar.scss
@@ -16,7 +16,8 @@
     width: 100%;
   }
 
-  & > li > button {
+  & > li > button,
+  & > li > a {
     display: flex;
     align-items: center;
     width: 90%;
@@ -33,7 +34,8 @@
     width: 60px;
   }
 
-  & > li > button > span {
+  & > li > button > span,
+  & > li > a > span {
     margin-left: 10px;
     display: inline;
     font-size: 18px;
@@ -50,7 +52,8 @@
       justify-content: center;
       padding: 15px 5px;
     }
-    & > li > button > span {
+    & > li > button > span,
+    & > li > a > span {
       display: none;
     }
   }
@@ -76,7 +79,7 @@
   color: white;
   font-size: 16px;
   border-radius: 50px;
-  padding: 15px;
+  padding: 15px 20px;
   justify-content: center;
   transition: transform 0.3s linear;
   border: 2px solid transparent;
