--- a/src/styles/PostItem.scss
+++ b/src/styles/PostItem.scss
@@ -28,6 +28,10 @@
   & > li > span {
     margin-left: 5px;
   }
+
+  & > li:nth-child(2) > button:hover {
+    color: $pr_blue;
+  }
 }
 
 .PostItem__Body {
