--- a/src/styles/MenuBar.scss
+++ b/src/styles/MenuBar.scss
@@ -24,6 +24,7 @@
     margin: 0 auto;
     padding: 10px;
     border-radius: 50px;
+    color: black;
   }
   & > li:nth-child(2) > button:hover,
   & > li:nth-child(3) > button:hover {
@@ -48,7 +49,8 @@
 
   @media (max-width: 1300px) {
     width: 80px;
-    & > li > button {
+    & > li > button,
+    & > li > a {
       justify-content: center;
       padding: 15px 5px;
     }
@@ -65,6 +67,7 @@
     bottom: 0;
     right: 0;
     left: 0;
+    z-index: 1;
     & > li {
       margin: 0;
     }
